refactor: replace most HttpURLConnection with HttpClient, get compiling